--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,9 @@ environment:
   sdk: '>=3.2.6 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   get: 4.6.6
